deployments/grafana/grafana.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-service
  namespace: grafana
spec:
  selector:
    app: grafana
  type: NodePort # Specifies the type of service as NodePort
  ports:
  - name: http
    port: 3000 # Port exposed by the service
    targetPort: 3000 # Port on which Grafana is listening
    nodePort: 30030 # Port on the node to expose the service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
      - name: grafana
        image: grafana/grafana:latest
        ports:
        - containerPort: 3000
